Update jwt refresh token
